# perplexity.ai-cli

./: .gitignore  README.md  orchestrator.py  perplexity.ai-cli.py  pyproject.toml  requirements.txt
examples/: basic-examples.sh  compare-topics.py  research-workflow.py  research-workflow.sh
perplexity_ai_cli/: __init__.py  core.py
