[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perplexity-ai-cli"
version = "1.1.0"
description = "Browser automation bridge to Perplexity AI with CLI, HTTP API, and Task Orchestration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Cfomodz"}
]
keywords = ["perplexity", "ai", "browser-automation", "cli", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "playwright>=1.40.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
perplexity-ai = "perplexity_ai_cli.core:cli_main"
ppl = "perplexity_ai_cli.core:cli_main"

[project.urls]
Homepage = "https://github.com/Cfomodz/perplexity.ai-cli"
Repository = "https://github.com/Cfomodz/perplexity.ai-cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["perplexity_ai_cli*"]

